Resolve esn#2632 Update avatar and bubble for a better visibility

--- a/frontend/css/modules/listItems.less
+++ b/frontend/css/modules/listItems.less
@@ -476,6 +476,11 @@
               .avatar(28px);
             }
 
+            .user-status-bubble {
+              height: 11px;
+              width: 11px;
+            }
+
             .inbox-image-with-overlay {
               .inbox-overlay {
                 .avatar(12px);
